--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-image: url(https://github.com/Makcim1988/portfolio/blob/main/images/bg.jpg);
+    background-image: url(/Makcim1988/portfolio/blob/main/images/bg.jpg);
     background-repeat: no-repeat;
     background-position: top center;
    
